# llama.cpp

./: .clang-format  .gitignore  CMakeLists.txt  test.sh
examples/simple/: CMakeLists.txt  batch.cpp  batch.h  color_log_sink.cpp  color_log_sink.h  model_context.cpp  model_context.h  simple.cpp
guidance/: cfg_test.py  guidance_test.py  homeassistant.py  llama_cpp_test.py  mistral.py  simple_guidance_test.py  utils.py
